test/e2e/chainsaw/httproute-unmanaged-rule/assertions/rollout-healthy.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: httproute-unmanaged-rule-rollout
  namespace: default
status:
  (phase == 'Healthy'): true
